--- a/bodyNav.css
+++ b/bodyNav.css
@@ -1,5 +1,35 @@
-.leftNav{
-    display: flex;
-    flex-direction: column;
-    margin: 25px 5px 0px 15.5%;
+.outer-wrapper {
+  display: flex;
+  justify-content: center;
 }
+
+.inner-wrapper {
+  display: flex;
+  width: 100%;
+  max-width: 1279px;
+  padding: 2.5px 0px;
+}
+
+.body-nav {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  padding-right: 12px;
+  height: 100vh;
+}
+
+.body-nav a {
+    background-color: #44b;
+    margin-bottom: 5px;
+    padding: 8px;
+    text-transform: uppercase;
+}
+
+
+
+
+
+
+
+
+
