--- a/bodyNav.css
+++ b/bodyNav.css
@@ -28,6 +28,7 @@
 main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 11px;
     list-style: none;
 }
 
@@ -38,8 +39,7 @@ main {
 .productName {
   background-color: #44b;
   color: white;
-  margin-right: 8px;
-  padding: 10px;
+  padding: 17px 88px 17px 10px;
 }
 
 
