--- a/bodyNav.css
+++ b/bodyNav.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   width: 240px;
+  min-width: 240px;
   padding-right: 12px;
   height: 100vh;
 }
@@ -32,13 +33,10 @@ main {
     list-style: none;
 }
 
-.product {
-  white-space: nowrap;
-}
-
 .productName {
   background-color: #44b;
   color: white;
+  white-space: nowrap;
   padding: 17px 88px 17px 10px;
 }
 
